--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@ To zoom in and see the origin of less common technologies, move the count slider
 </section>
 
 <section id="vendor-nature">
-            <h2>9. NATURE OF THE TECHNOLOGY: PRIVATE, PUBLIC OR HIDDEN? </h2>
+            <h2>9. NATURE OF TECHNOLOGY: PRIVATE, PUBLIC OR HIDDEN? </h2>
             
             <p>
                 We have classified the vendors into three categories to map the control of security:
@@ -1496,5 +1496,6 @@ To zoom in and see the origin of less common technologies, move the count slider
 
 </body>
 </html>
+
 
 
