--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
 </section>
 
 <section id="dystopian-state" style="margin-top: 80px; margin-bottom: 100px;">
-    <h2>4. Dystopian State: THE RATIO OF INTRUSION</h2>
+    <h2>4. Dystopian States: WHICH STATES USE THE MOST INVASIVE TECHNOLOGY? </h2>
     
     <p>
         Not all surveillance is created equal. This section analyzes the <strong>quality</strong> of the technology deployed, rather than just the quantity.
@@ -1496,6 +1496,7 @@ To zoom in and see the origin of less common technologies, move the count slider
 
 </body>
 </html>
+
 
 
 
