--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                 </div>
         </section>
 <section id="tech-viz" style="margin-top: 80px;">
-    <h2>2. Technological Arsenal: THE TOOLS OF CONTROL</h2>
+    <h2>2. THE TOOLS: WHICH ARE THE ADOPTED TECHNOLOGIES? </h2>
     
     <p>
         To understand the nature of modern surveillance, one must classify the tools employed. 
@@ -1496,6 +1496,7 @@ To zoom in and see the origin of less common technologies, move the count slider
 
 </body>
 </html>
+
 
 
 
