--- a/index.html
+++ b/index.html
@@ -1448,7 +1448,7 @@ To zoom in and see the origin of less common technologies, move the count slider
                 <strong>The Enigma of ND/NULL Data:</strong> A significant discovery emerged from a technical obstacle. We encountered massive amounts of missing data (N.A. or NULL) in the vendor column.
             </p>
             <p style="margin-top: 15px; border-left: 2px solid #fff; padding-left: 15px;">
-                <span class="challenge-highlight">OUR DECISION:</span> Instead of ignoring these voids, we interpreted them as political data. We understood that "Null" data represents the <em>Transparency "Black Zone"</em>: contracts protected by Non-Disclosure Agreements (NDAs), trade secrets, or national security protocols. These "voids" became an integral part of the thesis, representing 45.87% of the market.
+                <span class="challenge-highlight">MY DECISION:</span> Instead of ignoring these voids, i interpreted them as political data. i understood that "Null" data represents the <em>Transparency "Black Zone"</em>: contracts protected by Non-Disclosure Agreements (NDAs), trade secrets, or national security protocols. These "voids" became an integral part of the thesis, representing 45.87% of the market.
             </p>
         </div>
 
@@ -1472,7 +1472,7 @@ To zoom in and see the origin of less common technologies, move the count slider
             <ul class="credit-list">
                 <li>
                     <span class="credit-name">Electronic Frontier Foundation (EFF)</span>
-                    For making the <em>Atlas of Surveillance</em> public, a vital resource for digital democracy.
+                    Thanks for making the <em>Atlas of Surveillance</em> public, a vital resource for digital democracy.
                 </li>
                 <li>
                     <span class="credit-name">Gemini (AI Collaborator)</span>
@@ -1496,6 +1496,7 @@ To zoom in and see the origin of less common technologies, move the count slider
 
 </body>
 </html>
+
 
 
 
